# wild-samples

./: .gitignore
cpp/cpp11/: CMakeLists.txt  Makefile  cpp11test  main.cpp  smartptr.cpp
cpp/cpp11-sample/: CMakeLists.txt
cpp/cpp11/bld/: Makefile  cpp11sample  smartptr
cpp/cpp98/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  SConstruct  UnitTestResult.xml  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  doxygen.cfg  libtool  maketestcov.sh  testcases.md
cpp/cpp98/doc/: REST.mm  VoIP.mm  WebRTC.mm  hfrtc.mm
cpp/cpp98/etc/: hfrtc.ini  package_tool.lua
cpp/cpp98/exam/algo/: Huffman.cpp  Huffman.h
cpp/cpp98/exam/curl/: curl_easy_test.cpp
cpp/cpp98/exam/http/: Makefile.am  http_client_1st.cpp  http_client_1st.html  http_server_1st.cpp  http_server_1st.js  http_server_exam2.js
cpp/cpp98/exam/js/: Makefile.am  SpiderMonkeyTest.cpp  arraysort.js  v8test.cpp
cpp/cpp98/exam/libevent/: Makefile.am  echo_server.cpp  rot13_libevent_1st.cpp  rot13_libevent_2nd.cpp
cpp/cpp98/src/: CMakeLists.txt  hfrtc.cpp
cpp/cpp98/test/: BaseTestCase.h  CMakeLists.txt  TinyChartTest.cpp  TinyConfigTest.cpp  TinyUtilTest.cpp  UnitTest.cpp  lua_test.cpp  server_test.cpp  waltertest-waltertest.gcno
cpp/cpp98/util/: CMakeLists.txt  LuaUtil.cpp  LuaUtil.h  TinyUtil.h
java/account/: pom.xml  readme.md
java/account/client/: pom.xml
java/account/common/: pom.xml
java/account/integration/: pom.xml
java/account/server/: pom.xml
java/account/server/src/main/resources/: log4j.xml  mybatis-config.xml  spring-config.xml
java/account/server/src/main/webapp/: index.html  menu.html
java/account/server/src/main/webapp/WEB-INF/: web.xml
java/account/server/src/main/webapp/WEB-INF/classes/: mybatis-mapper.xml  mysql-schema.sql  spring-config.xml  spring-mvc.xml
java/account/server/src/main/webapp/WEB-INF/pages/: account.jsp
java/account/server/src/main/webapp/data/: todo.json
java/guestbook/: pom.xml
java/guestbook/src/main/java/com/github/walterfan/guestbook/: MessageConfig.java  MessageProperties.java
java/guestbook/src/main/resources/: jdbc.properties
java/guestbook/src/main/webapp/WEB-INF/: web.xml
java/guestbook/src/test/java/: MessageControllerTest.java
java/spring_rs_sample/: pom.xml  readme.md
java/spring_rs_sample/src/main/java/com/github/walterfan/configuration/: AppConfiguration.java  AppInitializer.java  CORSFilter.java  HelloWorldConfiguration.java  HelloWorldInitializer.java
java/spring_rs_sample/src/main/java/com/github/walterfan/controller/: HelloWorldRestController.java  IndexController.java  MessageController.java  UserRestController.java
java/spring_rs_sample/src/main/java/com/github/walterfan/model/: Message.java  User.java
java/spring_rs_sample/src/main/java/com/github/walterfan/service/: MessageService.java  UserService.java  UserServiceImpl.java
java/spring_rs_sample/src/main/webapp/WEB-INF/views/: Guestbook.jsp  Toolkit.jsp  UserManagement.jsp  index.jsp
java/sundry/: guestbook.sqlite  output.txt  pom.xml
java/sundry/src/main/resources/: app-context.xml  hibernate.properties  host_pin.json  logback.xml
java/sundry/src/test/resources/: MDCTest.xml
java/tpproxy/: pom.xml
vc/WinConsoleApp/: CMakeLists.txt  WebrtcSnippet.h  WinConsoleApp.cpp  WinConsoleApp.h  abseil-cpp
(+92 files in other folders)
